# django-hatch-startproject

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  manage.py  pyproject.toml  tailwind.config.js
config/: asgi.py  settings.py  urls.py  wsgi.py
locale/de/LC_MESSAGES/: django.po
project_name/: __init__.py  asgi.py  settings.py  wsgi.py
project_name/locale/en/LC_MESSAGES/: django.po
templates/: base.html
tests/: test_assert_true.py
